test/core/errors/offsets_error/zs/bitwise_xor_operator_error.zs
package bitwise_xor_operator_error;

struct BitwiseXorOperatorError
{
    uint32 offset;
offset ^ 0xf:
    string field;
};
